Cambios para ver usuarios

--- a/ecoMonedas/Web.config
+++ b/ecoMonedas/Web.config
@@ -36,4 +36,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="ContextoUsuario" connectionString="data source=25.9.251.245;initial catalog=ecoMonedas;persist security info=True;user id=admin;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
