Cambios en modelos y estructura de MVC para uso de datos.

--- a/ecoMonedasMVC/ecoMonedasMVC.csproj
+++ b/ecoMonedasMVC/ecoMonedasMVC.csproj
@@ -47,10 +47,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -128,10 +136,33 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BilleteraVirtualsController.cs" />
+    <Compile Include="Controllers\CanjesController.cs" />
+    <Compile Include="Controllers\CentroAcopiosController.cs" />
+    <Compile Include="Controllers\ColoresController.cs" />
+    <Compile Include="Controllers\CuponClientesController.cs" />
+    <Compile Include="Controllers\CuponsController.cs" />
+    <Compile Include="Controllers\DetalleCanjesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MaterialsController.cs" />
+    <Compile Include="Controllers\ProvinciasController.cs" />
+    <Compile Include="Controllers\RolsController.cs" />
+    <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BilleteraVirtual.cs" />
+    <Compile Include="Models\Canjes.cs" />
+    <Compile Include="Models\CentroAcopio.cs" />
+    <Compile Include="Models\Colores.cs" />
+    <Compile Include="Models\Cupon.cs" />
+    <Compile Include="Models\CuponCliente.cs" />
+    <Compile Include="Models\DetalleCanjes.cs" />
+    <Compile Include="Models\EcoContext.cs" />
+    <Compile Include="Models\Material.cs" />
+    <Compile Include="Models\Provincias.cs" />
+    <Compile Include="Models\Rol.cs" />
+    <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -235,10 +266,64 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\Usuarios\Create.cshtml" />
+    <Content Include="Views\Usuarios\Delete.cshtml" />
+    <Content Include="Views\Usuarios\Details.cshtml" />
+    <Content Include="Views\Usuarios\Edit.cshtml" />
+    <Content Include="Views\Usuarios\Index.cshtml" />
+    <Content Include="Views\Rols\Create.cshtml" />
+    <Content Include="Views\Rols\Delete.cshtml" />
+    <Content Include="Views\Rols\Details.cshtml" />
+    <Content Include="Views\Rols\Edit.cshtml" />
+    <Content Include="Views\Rols\Index.cshtml" />
+    <Content Include="Views\Provincias\Create.cshtml" />
+    <Content Include="Views\Provincias\Delete.cshtml" />
+    <Content Include="Views\Provincias\Details.cshtml" />
+    <Content Include="Views\Provincias\Edit.cshtml" />
+    <Content Include="Views\Provincias\Index.cshtml" />
+    <Content Include="Views\Materials\Create.cshtml" />
+    <Content Include="Views\Materials\Delete.cshtml" />
+    <Content Include="Views\Materials\Details.cshtml" />
+    <Content Include="Views\Materials\Edit.cshtml" />
+    <Content Include="Views\Materials\Index.cshtml" />
+    <Content Include="Views\DetalleCanjes\Create.cshtml" />
+    <Content Include="Views\DetalleCanjes\Delete.cshtml" />
+    <Content Include="Views\DetalleCanjes\Details.cshtml" />
+    <Content Include="Views\DetalleCanjes\Edit.cshtml" />
+    <Content Include="Views\DetalleCanjes\Index.cshtml" />
+    <Content Include="Views\CuponClientes\Create.cshtml" />
+    <Content Include="Views\CuponClientes\Delete.cshtml" />
+    <Content Include="Views\CuponClientes\Details.cshtml" />
+    <Content Include="Views\CuponClientes\Edit.cshtml" />
+    <Content Include="Views\CuponClientes\Index.cshtml" />
+    <Content Include="Views\Cupons\Create.cshtml" />
+    <Content Include="Views\Cupons\Delete.cshtml" />
+    <Content Include="Views\Cupons\Details.cshtml" />
+    <Content Include="Views\Cupons\Edit.cshtml" />
+    <Content Include="Views\Cupons\Index.cshtml" />
+    <Content Include="Views\Colores\Create.cshtml" />
+    <Content Include="Views\Colores\Delete.cshtml" />
+    <Content Include="Views\Colores\Details.cshtml" />
+    <Content Include="Views\Colores\Edit.cshtml" />
+    <Content Include="Views\Colores\Index.cshtml" />
+    <Content Include="Views\CentroAcopios\Create.cshtml" />
+    <Content Include="Views\CentroAcopios\Delete.cshtml" />
+    <Content Include="Views\CentroAcopios\Details.cshtml" />
+    <Content Include="Views\CentroAcopios\Edit.cshtml" />
+    <Content Include="Views\CentroAcopios\Index.cshtml" />
+    <Content Include="Views\Canjes\Create.cshtml" />
+    <Content Include="Views\Canjes\Delete.cshtml" />
+    <Content Include="Views\Canjes\Details.cshtml" />
+    <Content Include="Views\Canjes\Edit.cshtml" />
+    <Content Include="Views\Canjes\Index.cshtml" />
+    <Content Include="Views\BilleteraVirtuals\Create.cshtml" />
+    <Content Include="Views\BilleteraVirtuals\Delete.cshtml" />
+    <Content Include="Views\BilleteraVirtuals\Details.cshtml" />
+    <Content Include="Views\BilleteraVirtuals\Edit.cshtml" />
+    <Content Include="Views\BilleteraVirtuals\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
