--- a/ecoMonedasMVC/ecoMonedasMVC.csproj
+++ b/ecoMonedasMVC/ecoMonedasMVC.csproj
@@ -201,6 +201,7 @@
     <Content Include="images\EcoMonedas\azul.jpg" />
     <Content Include="images\EcoMonedas\cpolis.png" />
     <Content Include="images\EcoMonedas\dterra.jpg" />
+    <Content Include="images\EcoMonedas\florex.jpg" />
     <Content Include="images\EcoMonedas\Fondo.jpg" />
     <Content Include="images\EcoMonedas\mano-del-ambiente.jpg" />
     <Content Include="images\EcoMonedas\multi.png" />
